--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 header{
 background-color: #0733A6;
-color:right;
+color:white;
 }
+
 body{
     background-color:linear-gradient(180deg, rgba(2, 11, 90, 0.97) 0%, rgba(128, 92, 232, 0.392157) 100%);
-    
 }
