--- a/style.css
+++ b/style.css
@@ -4,5 +4,6 @@ color:white;
 }
 
 body{
-    background-color: linear-gradient(180deg, rgba(2, 11, 90, 0.97) 0%, rgba(128, 92, 232, 0.392157) 100%);
+    background-color: #020B5A 97% 
+                      #805CE8 39,22 %;
 }
