--- a/style.css
+++ b/style.css
@@ -4,5 +4,5 @@ color:white;
 }
 
 body{
-    background-color: #020B5A 97%  #805CE8 39,22 %;
+    background-color:( #020B5A 97%  #805CE8 39,22 %);
 }
