--- a/style.css
+++ b/style.css
@@ -4,5 +4,6 @@ color:white;
 }
 
 body{
-    background-image;:( #020B5A 97%  #805CE8 39,22 %);
+    background: linear-gradient(180deg, rgba(2, 11, 90, 0.97) 0%, rgba(128, 92, 232, 0.392157) 100%);
+
 }
