--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{margin: 0;
+{margin: 0;
   padding: 0;
 }
 
@@ -10,7 +10,9 @@ justify-content: space-around;
 align-items: center;
 padding:22px 0;
 }
-
+.cabecalho-imagem{
+  width: 20%;
+}
 .cabecalho-lista-item{
 display: inline-block;
 margin: 0 16px;
