--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ align-items: center;
 padding:22px 0;
 }
 .cabecalho-imagem{
-  width: 10%;
+width 20% src=logo edducacao.png;
 }
 .cabecalho-lista-item{
 display: inline-block;
