--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-{margin: 0;
+* {margin: 0;
   padding: 0;
 }
 
@@ -11,7 +11,7 @@ align-items: center;
 padding:22px 0;
 }
 .cabecalho-imagem1{
-width 5% ;
+width 2% ;
 }
 .cabecalho-lista-item{
 display: inline-block;
