--- a/style.css
+++ b/style.css
@@ -21,5 +21,6 @@ font: size 30px;
   padding: 16px 0;
 }
 .projeto-div{
-  text-justify:distribute-all-lines
+  text-align: center;
+  padding: 50px 0;
 }
