--- a/style.css
+++ b/style.css
@@ -25,6 +25,6 @@ font: size 30px;
   padding: 30px 0;
 }
 .rodape{
-  background-color: blueviolet;
+  background-color: black;
   text-align: center;
 }
