--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ font: size 30px;
 }
 
 .curso{
-  background-image: linear-gradient(#51025a, #e85cda64);
+  background-image: linear-gradient(#020B5A 97%, #805CE8 39.22%);
  color:white;
  display: flex;
  justify-content: center;
