--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ font: size 30px;
   background: linear-gradient(180deg, rgba(2, 11, 90, 0.97) 0%, rgba(128, 92, 232, 0.392157) 100%);
  color:white;
  display: flex;
- justify-content: center;
+ justify-content: space-around;
  align-items: center;
  padding: 24px 0;
 }
