--- a/style.css
+++ b/style.css
@@ -33,16 +33,16 @@ font: size 30px;
   padding: 24px 0;
  }
 
- .projeto-div{
-  text-align: center;
-  padding: 16px 0;
- }
  
 .projeto-titulo{
+  background: white;
   text-align: center;
   padding: 50px 0;
 }
-
+.projeto-div{
+  text-align: center;
+  padding: 16px 0;
+ }
 .rodape{
   background-color: black;
   text-align: center;
