--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ font: size 30px;
   padding: 50px 0;
 }
 .projeto-div{
-  text-align: center;
+  text-align: justify;
   padding: 16px 0;
  }
 .rodape{
