--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ font: size 30px;
 
  
 .projeto-titulo{
-  background: white;
+  background-color: white;
   text-align: center;
   padding: 50px 0;
 }
