--- a/style.css
+++ b/style.css
@@ -35,11 +35,15 @@ font: size 30px;
  }
 
  .projeto{
-background: white;
+background-color: white;
+color: black;
+display: flex;
+justify-content: space-around;
+align-items: center;
+padding: 50px 0;
  }
  
 .projeto-titulo{
-  color: black;
   text-align: center;
   padding: 50px 0;
 
