--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ font: size 30px;
 background-color: white;
 color: black;
 display: flex;
-justify-content: space-around;
+justify-content: center;
 align-items: center;
 padding: 50px 0;
 }
