--- a/style.css
+++ b/style.css
@@ -45,11 +45,12 @@ padding: 50px 0;
  
 .projeto-titulo{
   text-align: center;
+  align-items: center;
   padding: 50px;
 }
 
 .projeto-div{
-  
+
 }
 
 .rodape{
