--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ padding: 50px 0;
 .projeto-titulo{
   text-align: center;
   align-items: center;
+  justify-content: center;
   padding: 50px;
 }
 
