--- a/style.css
+++ b/style.css
@@ -45,11 +45,12 @@ padding: 50px 0;
  
 .projeto-titulo{
   text-align: center;
-  padding: 50px;
+  padding: 50px 0;
 }
 
 .projeto-div{
-
+  text-align: center;
+  padding: 16px 0;
 }
 
 .rodape{
