--- a/style.css
+++ b/style.css
@@ -42,7 +42,9 @@ justify-content: center;
 align-items: center;
 padding: 50px 0;
 }
- 
+ .projetos-div-conteudo{
+text-align: center;
+ }
 .projeto-titulo{
   text-align: center;
   padding: 50px 0;
