--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 .cabecalho {
 background-color: #0733A6;
 color:white;
+font-size: x-large;
 display:flex;
 justify-content: space-around;
 align-items: center;
