--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ padding:24px 0;
 .cabecalho-lista-item{
 display: inline-block;
 margin: 0 16px;
-font: size 24px;
+font-size:  24px;
 }
 
 .curso{
