--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ padding: 50px 0;
 }
  .projetos-div-conteudo{
 text-align: center;
+font-size: x-large;
  }
 .projeto-titulo{
   text-align: center;
